--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,7 +1,7 @@
 steps:
-- name: 'gcr.io/cloud-builders/git'
+- name: 'gcr.io/gcr.io/abstract-web-393206/image'
   args: ['clone', 'https://github.com/ramanamurthy123456/ram.git']
-- name: 'gcr.io/cloud-builders/docker'
+- name: 'gcr.io/gcr.io/abstract-web-393206/image'
   args: ['build', '-t', 'gcr.io/abstract-web-393206/image:$COMMIT_SHA', '.']
 images: ['gcr.io/gcr.io/abstract-web-393206/image:$COMMIT_SHA']
 options:
