--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,6 +3,6 @@ steps:
   args: ['clone', 'https://github.com/ramanamurthy123456/ram.git']
 - name: 'gcr.io/gcr.io/abstract-web-393206/image'
   args: ['build', '-t', 'gcr.io/abstract-web-393206/image:$COMMIT_SHA', '.']
-images: ['gcr.io/gcr.io/abstract-web-393206/image:$COMMIT_SHA']
+images: ['gcr.io/abstract-web-393206/image:$COMMIT_SHA']
 options:
   logging: CLOUD_LOGGING_ONLY
