--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,6 +3,16 @@ steps:
   args: ['clone', 'https://github.com/ramanamurthy123456/ram.git']
 - name: 'gcr.io/cloud-builders/docker'
   args: ['build', '-t', 'gcr.io/abstract-web-393206/image:amzu', './ram/']
+- name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+  entrypoint: gcloud
+  args:
+  - 'run'
+  - 'deploy'
+  - 'image'
+  - '--image'
+  - 'gcr.io/abstract-web-393206/image:amzu'
+  - '--region'
+  - 'us-central'
 images: ['gcr.io/abstract-web-393206/image:amzu']
 options:
   logging: CLOUD_LOGGING_ONLY
