--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -12,7 +12,7 @@ steps:
   - '--image'
   - 'gcr.io/abstract-web-393206/image:amzu'
   - '--region'
-  - 'us-central'
+  - 'us-central1'
   - '--allow-unauthenticated'
 images: ['gcr.io/abstract-web-393206/image:amzu']
 options:
