--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -5,17 +5,17 @@ steps:
   args: ['build', '-t', 'gcr.io/my-project-12345678-402312/image:v1', './ram']
 - name: 'gcr.io/cloud-builders/docker'
   args: ['push', 'gcr.io/my-project-12345678-402312/image:v1']
-- name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
-  entrypoint: gcloud
-  args:
-  - 'run'
-  - 'deploy'
-  - 'image'
-  - '--image'
-  - 'gcr.io/my-project-12345678-402312/image:v1'
-  - '--region'
-  - 'us-west1'
-  - '--allow-unauthenticated'
+# - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+  # entrypoint: gcloud
+  # args:
+  # - 'run'
+  # - 'deploy'
+  # - 'image'
+  # - '--image'
+  # - 'gcr.io/my-project-12345678-402312/image:v1'
+  # - '--region'
+  # - 'us-west1'
+  # - '--allow-unauthenticated'
 # images: ['gcr.io/abstract-web-393206/image:amzu']
 options:
   logging: CLOUD_LOGGING_ONLY
