--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,9 +2,8 @@ steps:
 - name: 'gcr.io/cloud-builders/git'
   args: ['clone', 'https://github.com/ramanamurthy123456/ram.git']
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'gcr.io/my-project-12345678-402312/image:v1', './ram']
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['push', 'gcr.io/my-project-12345678-402312/image:v1']
+  args: ['push', 'gcr.io/my-project-12345678-402312/image:2']
 - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
   entrypoint: gcloud
   args:
@@ -12,9 +11,9 @@ steps:
   - 'deploy'
   - 'image'
   - '--image'
-  - 'gcr.io/my-project-12345678-402312/image:v1'
+  - 'gcr.io/my-project-12345678-402312/image:2'
   - '--region'
-  - 'us-west1'
+  - 'us-central1'
   - '--allow-unauthenticated'
 # images: ['gcr.io/abstract-web-393206/image:amzu']
 options:
