--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -5,23 +5,23 @@ steps:
   args: ['build', '-t', 'gcr.io/key-component-402312/image:2', './ram']
 - name: 'gcr.io/cloud-builders/docker'
   args: ['push', 'gcr.io/key-component-402312/image:2']
-- name: 'gcr.io/cloud-builders/gcloud'
-  entrypoint: 'gcloud'
-  args:
-  - 'app'
-  - 'deploy'
-  - '--image'
-  - 'gcr.io/key-component-402312/image:2'
 # - name: 'gcr.io/cloud-builders/gcloud'
 #   entrypoint: 'gcloud'
 #   args:
-#   - '-c'
-#   - 'gcloud auth configure-docker'
-#   - ' docker pull gcr.io/$PROJECT_ID/my-image:$COMMIT_SHA'
-#   - ' gcloud app deploy --image-url=gcr.io/$PROJECT_ID/my-image:$COMMIT_SHA --quiet'
-#   timeout: '1600s'
-# images:
-# - 'gcr.io/$PROJECT_ID/my-image:$COMMIT_SHA'
+#   - 'app'
+#   - 'deploy'
+#   - '--image'
+#   - 'gcr.io/key-component-402312/image:2'
+- name: 'gcr.io/cloud-builders/gcloud'
+  entrypoint: 'gcloud'
+  args:
+  - '-c'
+  - 'gcloud auth configure-docker'
+  - ' docker pull gcr.io/key-component-402312/image:2'
+  - ' gcloud app deploy --image-url=gcr.io/key-component-402312/image:2 --quiet'
+  timeout: '1600s'
+images:
+- 'gcr.io/key-component-402312/image:2'
 
 # images: ['gcr.io/abstract-web-393206/image:amzu']
 options:
