--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -13,15 +13,15 @@ steps:
 #   - '--image'
 #   - 'gcr.io/key-component-402312/image:2'
 - name: 'gcr.io/cloud-builders/gcloud'
-  entrypoint: 'gcloud'
+  entrypoint: 'bash'
   args:
   - '-c'
   - 'gcloud auth configure-docker'
   - 'docker pull gcr.io/key-component-402312/image:2'
   - 'gcloud app deploy app.yaml --image-url=gcr.io/key-component-402312/image:2 --quiet'
   timeout: '1600s'
-images:
-- 'gcr.io/key-component-402312/image:2'
+  images:
+    - 'gcr.io/key-component-402312/image:2'
 
 # images: ['gcr.io/abstract-web-393206/image:amzu']
 options:
