--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -18,7 +18,7 @@ steps:
   - '-c'
   - 'gcloud auth configure-docker'
   - 'docker pull gcr.io/key-component-402312/image:2'
-  - 'gcloud app deploy app.yaml --image-url=gcr.io/key-component-402312/image:2 --quiet'
+  - 'gcloud app deploy --image-url=gcr.io/key-component-402312/image:2 --quiet'
   timeout: '1600s'
   images:
     - 'gcr.io/key-component-402312/image:2'
