--- a/app.yaml
+++ b/app.yaml
@@ -1,15 +1,15 @@
 
-runtime: python27
-api_version: 1
-threadsafe: true
+# runtime: python27
+# api_version: 1
+# threadsafe: true
 
-automatic_scaling:
-  max_idle_instances: 20
+# automatic_scaling:
+#   max_idle_instances: 20
 
-handlers:
-- url: /favicon\.ico
-  static_files: favicon.ico
-  upload: favicon\.ico
+# handlers:
+# - url: /favicon\.ico
+#   static_files: favicon.ico
+#   upload: favicon\.ico
 
-- url: /.*
-  script: helloworld.APP
+# - url: /.*
+#   script: helloworld.APP
