--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -13,7 +13,7 @@ steps:
 #   - '--image'
 #   - 'gcr.io/key-component-402312/image:2'
 - name: 'gcr.io/cloud-builders/gcloud'
-  entrypoint: 'bash'
+  entrypoint: 'gcloud'
   args:
   - '-c'
   - 'gcloud auth configure-docker'
