--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -17,7 +17,7 @@ steps:
   args:
   - '-c'
   - 'gcloud auth configure-docker'
-  - 'docker pull gcr.io/key-component-402312/image:2'
+  # - 'docker pull gcr.io/key-component-402312/image:2'
   - 'gcloud app deploy --image-url=gcr.io/key-component-402312/image:2 --quiet'
   timeout: '1600s'
   images:
