--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -5,13 +5,14 @@ steps:
   args: ['build', '-t', 'gcr.io/key-component-402312/image:2', './ram']
 - name: 'gcr.io/cloud-builders/docker'
   args: ['push', 'gcr.io/key-component-402312/image:2']
-# - name: 'gcr.io/cloud-builders/gcloud'
-#   entrypoint: 'gcloud'
-#   args:
-#   - 'app'
-#   - 'deploy'
-#   - '--image'
-#   - 'gcr.io/key-component-402312/image:2'
+- name: 'gcr.io/cloud-builders/gcloud'
+  entrypoint: 'gcloud'
+  args:
+  - 'app'
+  - 'deploy'
+  - '--image'
+  - 'gcr.io/key-component-402312/image:2'
+  timeout: '1600s'
 # - name: 'gcr.io/cloud-builders/gcloud'
 #   entrypoint: 'gcloud'
 #   args:
