--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,29 +1,21 @@
 steps:
-- name: 'gcr.io/cloud-builders/git'
-  args: ['clone', 'https://github.com/ramanamurthy123456/ram.git']
-- name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'gcr.io/key-component-402312/image:2', './ram']
-- name: 'gcr.io/cloud-builders/docker'
-  args: ['push', 'gcr.io/key-component-402312/image:2']
-- name: 'gcr.io/cloud-builders/gcloud'
-  entrypoint: 'gcloud'
-  args:
-  - 'app'
-  - 'deploy'
-  - '--image'
-  - 'gcr.io/key-component-402312/image:2'
-  timeout: '1600s'
-# - name: 'gcr.io/cloud-builders/gcloud'
-#   entrypoint: 'gcloud'
-#   args:
-#   - '-c'
-#   - 'gcloud auth configure-docker'
-#   # - 'docker pull gcr.io/key-component-402312/image:2'
-#   - 'gcloud app deploy --image-url=gcr.io/key-component-402312/image:2 --quiet'
-#   timeout: '1600s'
-#   images:
-#     - 'gcr.io/key-component-402312/image:2'
+  - name: Checkout repository
+    uses: actions/checkout@v2
 
-# images: ['gcr.io/abstract-web-393206/image:amzu']
-options:
-  logging: CLOUD_LOGGING_ONLY
+  - name: Set up Python
+    uses: actions/setup-python@v2
+    with:
+      python-version: 3.0  # Replace with your desired Python version
+
+  - name: Install dependencies
+    run: |
+      python -m pip install --upgrade pip
+      pip install -r requirements.txt  # Replace with your actual requirements file name
+
+  - name: Run tests
+    run: |
+      python -m unittest discover  # Replace with your test command
+
+  - name: Execute Python script
+    run: |
+      python main.py  # Replace with the actual filename of your Python script
