--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,21 +1,41 @@
+# cloudbuild.yaml
+
 steps:
-  - name: Checkout repository
-    uses: actions/checkout@v2
+  # Install dependencies, such as Python and required libraries
+  - name: 'python'
+    entrypoint: 'bash'
+    args:
+    - '-c'
+    - 'apt-get update && apt-get install -y python3 python3-pip'
 
-  - name: Set up Python
-    uses: actions/setup-python@v2
-    with:
-      python-version: 3.0  # Replace with your desired Python version
+  # Clone the repository
+  - name: 'gcr.io/cloud-builders/git'
+    args: ['clone', '.']
 
-  - name: Install dependencies
-    run: |
-      python -m pip install --upgrade pip
-      pip install -r requirements.txt  # Replace with your actual requirements file name
+  # Install requirements
+  - name: 'python'
+    entrypoint: 'bash'
+    args:
+    - '-c'
+    - 'pip3 install -r requirements.txt'
 
-  - name: Run tests
-    run: |
-      python -m unittest discover  # Replace with your test command
+  # Convert and execute the train.ipynb file
+  - name: 'python'
+    entrypoint: 'bash'
+    args:
+    - '-c'
+    - 'jupyter nbconvert --to script train.ipynb && python3 train.py'
 
-  - name: Execute Python script
-    run: |
-      python main.py  # Replace with the actual filename of your Python script
+  # Convert and execute the deploy.ipynb file
+  - name: 'python'
+    entrypoint: 'bash'
+    args:
+    - '-c'
+    - 'jupyter nbconvert --to script deploy.ipynb && python3 deploy.py'
+
+  # Convert and execute the predict.ipynb file
+  - name: 'python'
+    entrypoint: 'bash'
+    args:
+    - '-c'
+    - 'jupyter nbconvert --to script predict.ipynb && python3 predict.py'
