--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,5 +1,10 @@
 # cloudbuild.yaml
 
+
+options:
+  logging: "CLOUD_LOGGING_ONLY"
+
+
 steps:
   # Install dependencies, such as Python and required libraries
   - name: 'python'
