--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -28,7 +28,7 @@ steps:
     entrypoint: 'bash'
     args:
     - '-c'
-    - 'jupyter nbconvert --to script main.ipynb && python3 train.py'
+    - 'jupyter nbconvert --to script main.ipynb && python3 main.py'
 
   # # Convert and execute the deploy.ipynb file
   # - name: 'python'
