--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,47 +1,34 @@
 # cloudbuild.yaml
 
-
-
-
-
 steps:
-  # Install dependencies, such as Python and required libraries
+  # Install Jupyter nbconvert
   - name: 'python'
     entrypoint: 'bash'
     args:
     - '-c'
-    - 'apt-get update && apt-get install -y python3 python3-pip'
+    - 'pip install nbconvert'
 
   # Clone the repository
   - name: 'gcr.io/cloud-builders/git'
     args: ['clone', '.']
 
-  # Install requirements
+  # Convert the Jupyter Notebook to Python script
   - name: 'python'
     entrypoint: 'bash'
     args:
     - '-c'
-    - 'pip3 install -r requirements.txt'
+    - 'jupyter nbconvert --to script your_notebook.ipynb'
 
-  # Convert and execute the train.ipynb file
+  # Install dependencies if needed
   - name: 'python'
     entrypoint: 'bash'
     args:
     - '-c'
-    - 'jupyter nbconvert --to script main.ipynb && python3 main.py'
+    - 'pip install -r requirements.txt'
 
-  # # Convert and execute the deploy.ipynb file
-  # - name: 'python'
-  #   entrypoint: 'bash'
-  #   args:
-  #   - '-c'
-  #   - 'jupyter nbconvert --to script deploy.ipynb && python3 deploy.py'
-
-  # # Convert and execute the predict.ipynb file
-  # - name: 'python'
-  #   entrypoint: 'bash'
-  #   args:
-  #   - '-c'
-  #   - 'jupyter nbconvert --to script predict.ipynb && python3 predict.py'
-options:
-  logging: "CLOUD_LOGGING_ONLY"
+  # Run the Python script
+  - name: 'python'
+    entrypoint: 'bash'
+    args:
+    - '-c'
+    - 'python your_notebook.py'
