--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -10,25 +10,25 @@ steps:
 
   # Clone the repository
   - name: 'gcr.io/cloud-builders/git'
-    args: ['clone', '.']
+    args: ['clone', 'https://github.com/ramanamurthy123456/ram.git']
 
   # Convert the Jupyter Notebook to Python script
   - name: 'python'
     entrypoint: 'bash'
     args:
     - '-c'
-    - 'jupyter nbconvert --to script your_notebook.ipynb'
+    - 'jupyter nbconvert --to script main.ipynb'
 
-  # Install dependencies if needed
-  - name: 'python'
-    entrypoint: 'bash'
-    args:
-    - '-c'
-    - 'pip install -r requirements.txt'
+  # # Install dependencies if needed
+  # - name: 'python'
+  #   entrypoint: 'bash'
+  #   args:
+  #   - '-c'
+  #   - 'pip install -r requirements.txt'
 
   # Run the Python script
   - name: 'python'
     entrypoint: 'bash'
     args:
     - '-c'
-    - 'python your_notebook.py'
+    - 'python main.py'
